--- a/app/robots/iCubEdinburgh01/camera/dragonfly2_config_left_bayer_320_240.ini
+++ b/app/robots/iCubEdinburgh01/camera/dragonfly2_config_left_bayer_320_240.ini
@@ -16,5 +16,4 @@ gamma 0.4
 saturation 0.271
 framerate 30
 use_network_time 1
-d 1
-#guid <64bit global identifier, without the leading 0x> then remove the d option
+guid 00b09d0100b96855
