--- a/src/tools/fingersTuner/CMakeLists.txt
+++ b/src/tools/fingersTuner/CMakeLists.txt
@@ -18,13 +18,10 @@ source_group("Header Files" FILES ${header_files})
 source_group("Source Files" FILES ${source_files})
 source_group("IDL Files"    FILES ${idl_files})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
-                    ${IDL_GENERATED_CODE_DIR}/include
+include_directories(${IDL_GENERATED_CODE_DIR}/include
                     ${YARP_INCLUDE_DIRS}
                     ${ctrlLib_INCLUDE_DIRS})
 
 add_executable(${PROJECTNAME} ${header_files} ${source_files} ${idl_files})
 target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES} ctrlLib)
 install(TARGETS ${PROJECTNAME} DESTINATION bin)
-
-
