added new positionDirectControl module. Still experimental!

--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(iCubDemoY3)
 add_subdirectory(demoForceImitation)
 add_subdirectory(logpolarRemapper)
 add_subdirectory(logpolarTransform)
+add_subdirectory(positionDirectControl)
 add_subdirectory(velocityControl)
 add_subdirectory(velocityObserver)
 add_subdirectory(wholeBodyDynamics)
