--- a/app/robots/experimentalSetups/mc4plus-jig/robotMotorGui.ini
+++ b/app/robots/experimentalSetups/mc4plus-jig/robotMotorGui.ini
@@ -1,13 +1,18 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (onboard)               
+parts (mc4plusjig)               
  
-[onboard_zero]   
+[mc4plusjig_zero]   
 //                          0                      
 PositionZero                0                          
-VelocityZero                10              
-    
+VelocityZero                10
+              
+[mc4plusjig_calib]
+CalibrationType		    3
+Calibration1		    32767.9
+Calibration2		    10.0
+Calibration3	            38271.9			    
  
 //DO NOT REMOVE THIS LINE    
  
