[simulator] adding parameter for friction along colliding surfaces to ode_params.ini and code

--- a/app/simConfig/conf/ode_params.ini
+++ b/app/simConfig/conf/ode_params.ini
@@ -22,6 +22,11 @@ worldERP 0.2
 // Reducing it can help prevent "popping" of deeply embedded objects
 maxContactCorrectingVel 1000
 
+//Contact joints can simulate friction at the contact by applying special forces in the two friction directions that are perpendicular to the normal.
+//This value sets the friction coefficient, mju, for both directions. High means that the colliding surfaces will not slide along one another. 
+//0.0 means that they will slip along one another with no resistance.  
+contactFrictionCoefficient 1.0
+
 // Contacts are allowed to sink into the surface layer up to the given depth before coming to rest. 
 // The default value is zero. Increasing this to some small value (e.g. 0.001) can help prevent jittering 
 // problems due to contacts being repeatedly made and broken. 
