added dualCamCalib module

--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(d4cServer)
 
 if(ICUB_USE_OpenCV)
     add_subdirectory(camCalib)
+    add_subdirectory(dualCamCalib)
     add_subdirectory(actionsRenderingEngine)
     add_subdirectory(motionCUT)
     add_subdirectory(pf3dTracker)
