Move the define ETHRES_DEBUG_DONTREADBACK from code to CMake advanced option

--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -8,7 +8,12 @@ SET(PROJECTNAME ethResources)
 PROJECT(${PROJECTNAME})
 
 
+option(ETHRES_DEBUG_DONTREADBACK "Compile EmbObj Library to run in testbed without EMS (will not work of course, just for debugging high level code)" FALSE)
+mark_as_advanced (ETHRES_DEBUG_DONTREADBACK)
 
+if(ETHRES_DEBUG_DONTREADBACK)
+    add_definitions( -DETHRES_DEBUG_DONTREADBACK)
+endif(ETHRES_DEBUG_DONTREADBACK)
 
 # defined in porting.h  -- update: now seems that the porting file doen not exists anymore....
 
