Removed installation of RobotMotorGui.ini from iCubChemnitz01 and iCubHertfordshire0 since the file was deleted on commit a67e1e0ab8a05adb32a1a3d55fcb0fa1d60a14b9

--- a/app/robots/iCubChemnitz01/CMakeLists.txt
+++ b/app/robots/iCubChemnitz01/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(appname iCubChemnitz01)
 
-set(scripts icub_all.xml robotMotorGui.ini firmwareUpdate.txt robotInterface.ini)
+set(scripts icub_all.xml firmwareUpdate.txt robotInterface.ini)
 
 yarp_install(FILES ${scripts}   DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
 yarp_install(FILES ${dragonFly} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
