--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,7 @@ mark_as_advanced(ICUB_APPLICATIONS_PREFIX)
 # new "data" installation - available with yarp2.4
 include(YarpInstallationHelpers)
 yarp_configure_external_installation(iCub WITH_PLUGINS)
+set(YARP_FORCE_DYNAMIC_PLUGINS TRUE CACHE INTERNAL "iCub is always built with dynamic plugins")
 
 # temporary options for debugging/testing new functionalities
 set(ICUB_USE_INTERFACEGUI TRUE CACHE BOOL "enable interface gui")
