--- a/src/tools/stereoCalib/CMakeLists.txt
+++ b/src/tools/stereoCalib/CMakeLists.txt
@@ -13,8 +13,8 @@ SOURCE_GROUP("Header Files" FILES ${header})
 INCLUDE_DIRECTORIES(${iKin_INCLUDE_DIRS}   ${PROJECT_SOURCE_DIR}/include
                     ${YARP_INCLUDE_DIRS}
                     ${OpenCV_INCLUDE_DIRS})
-					
+
 ADD_EXECUTABLE(${PROJECTNAME} ${source} ${header})
-TARGET_LINK_LIBRARIES(${PROJECTNAME}  ${YARP_LIBRARIES} ${OpenCV_LIBRARIES} icubmod iKin)
+TARGET_LINK_LIBRARIES(${PROJECTNAME}  ${YARP_LIBRARIES} ${OpenCV_LIBRARIES} iKin)
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
 
