--- a/src/examples/cartesianInterfaceExample/CMakeLists.txt
+++ b/src/examples/cartesianInterfaceExample/CMakeLists.txt
@@ -16,9 +16,7 @@ INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS}
 
 ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
 
-TARGET_LINK_LIBRARIES(${PROJECTNAME} icubmod
-                                     ${GSL_LIBRARIES}
-                                     ${YARP_LIBRARIES})
+TARGET_LINK_LIBRARIES(${PROJECTNAME} ${GSL_LIBRARIES} ${YARP_LIBRARIES})
 
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
 
