--- a/src/libraries/d4c/CMakeLists.txt
+++ b/src/libraries/d4c/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${YARP_INCLUDE_DIRS})
 
 add_library(${PROJECTNAME} ${folder_source} ${folder_header_private} ${folder_header})
-target_link_libraries(${PROJECTNAME} ctrlLib icubmod ${GSL_LIBRARIES} ${YARP_LIBRARIES})
+target_link_libraries(${PROJECTNAME} ctrlLib ${GSL_LIBRARIES} ${YARP_LIBRARIES})
 
 icub_export_library(${PROJECTNAME} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
                                    DEPENDS ctrlLib
