--- a/src/simulators/simCartesianControl/CMakeLists.txt
+++ b/src/simulators/simCartesianControl/CMakeLists.txt
@@ -14,8 +14,7 @@ INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})
 
 ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
 
-TARGET_LINK_LIBRARIES(${PROJECTNAME} icubmod
-                                     ${YARP_LIBRARIES})
+TARGET_LINK_LIBRARIES(${PROJECTNAME} ${YARP_LIBRARIES})
 
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
 
