cleanup induced by use of plug-ins

--- a/src/simulators/iCubSimulation/CMakeLists.txt
+++ b/src/simulators/iCubSimulation/CMakeLists.txt
@@ -111,7 +111,7 @@ IF (NOT ICUB_SIM_OMIT_LOGPOLAR)
   TARGET_LINK_LIBRARIES(${PROJECTNAME} logpolar)
 ENDIF ()
 
-TARGET_LINK_LIBRARIES(${PROJECTNAME} icubmod skinDynLib)
+TARGET_LINK_LIBRARIES(${PROJECTNAME} skinDynLib)
 
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin COMPONENT Core)
 
