--- a/app/default/scripts/cameras_calib_bayer_640_480.xml.template
+++ b/app/default/scripts/cameras_calib_bayer_640_480.xml.template
@@ -3,12 +3,12 @@
 <dependencies>
 </dependencies>
 <module>
-      <name>icubmoddev</name>
+      <name>yarpdev</name>
       <parameters> --from camera/dragonfly2_config_left_bayer_640_480 </parameters>
 	  <node>pc104</node>
    </module>
    <module>
-      <name>icubmoddev</name>
+      <name>yarpdev</name>
       <parameters> --from camera/dragonfly2_config_right_bayer_640_480</parameters>
       <node>pc104</node>
    </module>
