initial commit for bcbBattery device

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -42,6 +42,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(socketCan)
   add_subdirectory(esdSniffer)
   add_subdirectory(fakeCan)
+  add_subdirectory(bcbBattery)
   add_subdirectory(gazeController)
   add_subdirectory(parametricCalibrator)
   add_subdirectory(parametricCalibratorEth)
