logpolar ported into https://github.com/robotology/logpolar

--- a/src/simulators/iCubSimulation/CMakeLists.txt
+++ b/src/simulators/iCubSimulation/CMakeLists.txt
@@ -92,12 +92,12 @@ IF (ICUB_SIM_ENABLE_ODESDL)
 
 ENDIF ()
 
-
-OPTION(ICUB_SIM_OMIT_LOGPOLAR "Omit logpolar support from simulator" FALSE)
-IF (ICUB_SIM_OMIT_LOGPOLAR)
-  ADD_DEFINITIONS(-DOMIT_LOGPOLAR)
+find_package(logpolar QUIET)
+IF (logpolar_FOUND)
+   message(STATUS "iCub Simulator: logpolar library detected and used")
+   INCLUDE_DIRECTORIES(${logpolar_INCLUDE_DIRS})
 ELSE ()
-  INCLUDE_DIRECTORIES(${logpolar_INCLUDE_DIRS})
+   ADD_DEFINITIONS(-DOMIT_LOGPOLAR)
 ENDIF ()
 
 ADD_EXECUTABLE(${PROJECTNAME} ${folder_source} ${folder_header})
@@ -107,7 +107,7 @@ IF (ICUB_SIM_ENABLE_ODESDL)
   TARGET_LINK_LIBRARIES(${PROJECTNAME} ${SDL_LIBRARY} ${ODE_LIBRARIES})
 ENDIF ()
 
-IF (NOT ICUB_SIM_OMIT_LOGPOLAR)
+IF (logpolar_FOUND)
   TARGET_LINK_LIBRARIES(${PROJECTNAME} logpolar)
 ENDIF ()
 
