--- a/src/modules/cartesianInterfaceControl/CMakeLists.txt
+++ b/src/modules/cartesianInterfaceControl/CMakeLists.txt
@@ -3,20 +3,14 @@
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 # 
 
-SET(PROJECTNAME cartesianInterfaceExample)
-
+SET(PROJECTNAME cartesianInterfaceControl)
 PROJECT(${PROJECTNAME})
 
 SET(folder_source main.cpp)
-
 SOURCE_GROUP("Source Files" FILES ${folder_source})
 
-INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS}
-                    ${YARP_INCLUDE_DIRS})
-
+INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
 ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
-
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${GSL_LIBRARIES} ${YARP_LIBRARIES})
-
 INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
 
