--- a/src/libraries/icubmod/bcbBattery/bcbBattery.ini
+++ b/src/libraries/icubmod/bcbBattery/bcbBattery.ini
@@ -1,5 +1,5 @@
-[plugin canBusAnalogSensor]
+[plugin bcbBattery]
 type device
 name bcbBattery
 library bcbBattery
-wrapper AnalogServer
+wrapper BatteryWrapper
