--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -43,6 +43,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(esdSniffer)
   add_subdirectory(fakeCan)
   add_subdirectory(bcbBattery)
+  add_subdirectory(bmsBattery)
   add_subdirectory(gazeController)
   add_subdirectory(parametricCalibrator)
   add_subdirectory(parametricCalibratorEth)
