first passage for  face v3

--- a/app/robots/experimentalSetups/head-v3/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/head-v3/yarpmotorgui.ini
@@ -1,13 +1,13 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (mc4plusjig)               
+parts (faceV3)               
  
-[mc4plusjig_zero]                       
-PositionZero                0	0                          
+[faceV3_zero]                       
+PositionZero                0	14                          
 VelocityZero                20	20
                           
-[mc4plusjig_calib]
+[faceV3_calib]
 CalibrationType		    0
 Calibration1		    250.0
 Calibration2		    10.0
