--- a/app/robots/experimentalSetups/head-v3/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/head-v3/yarpmotorgui.ini
@@ -1,17 +1,17 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (faceV3)               
+parts (facev3)               
  
-[faceV3_zero]                       
-PositionZero                0	14                          
-VelocityZero                20	20
+[facev3_zero]                       
+PositionZero                0		0		0 		0                         
+VelocityZero                20		20		20		20
                           
-[faceV3_calib]
-CalibrationType		    0
-Calibration1		    250.0
-Calibration2		    10.0
-Calibration3	            0.0		    
+[facev3_calib]
+CalibrationType		    	0		0		0		0
+Calibration1		    	250.0	250.0	250.0	250.0
+Calibration2		    	10.0	10.0	10.0	10.0
+Calibration3	    		0.0		0.0		0.0		0.0    
  
 //DO NOT REMOVE THIS LINE    
  
