--- a/app/iKinGazeCtrl/conf/configSim.ini
+++ b/app/iKinGazeCtrl/conf/configSim.ini
@@ -1,6 +1,7 @@
 robot                 icubSim
 saccades              off
 neck_position_control off
+stabilization         off
 eyeTiltMin            -12.0
 eyeTiltMax            15.0
 ping_robot_tmo        40.0
