[iKinGazeCtrl] - options changed - track mode improved

--- a/app/iKinGazeCtrl/conf/configSim.ini
+++ b/app/iKinGazeCtrl/conf/configSim.ini
@@ -1,5 +1,7 @@
-robot                 icubSim
-saccades              off
-camerasContext        cameraCalibration
-camerasFile           icubSimEyes.ini
+robot     icubSim
+saccades  off
+
+[cameras]
+context   cameraCalibration
+file      icubSimEyes.ini
 
