added canLoader-console project, since canLoader gtk version does not currently work on WIN32+VS12

--- a/src/tools/canLoader/CMakeLists.txt
+++ b/src/tools/canLoader/CMakeLists.txt
@@ -9,6 +9,7 @@ if(${icub_firmware_shared_FOUND})
     message(STATUS " +++ tool compiling canLoaderLib")
 
 ADD_SUBDIRECTORY(canLoaderLib)
+ADD_SUBDIRECTORY(canLoader-console)
 
 if(ICUB_USE_GTK2)
     ADD_SUBDIRECTORY(canLoader)
