--- a/src/simulators/iCubSimulation/CMakeLists.txt
+++ b/src/simulators/iCubSimulation/CMakeLists.txt
@@ -63,24 +63,11 @@ IF (ICUB_SIM_ENABLE_ODESDL)
     ENDIF ()
   ENDIF (APPLE)
 
-  IF (NOT DEFINED USE_ODE_DOUBLE)
-    IF (NOT CMAKE_CROSS_COMPILING)
-      INCLUDE(CheckCXXSourceRuns)
-      SET(CMAKE_REQUIRED_INCLUDES ${ODE_INCLUDE_DIRS})
-      SET(CMAKE_REQUIRED_LIBRARIES ${ODE_LIBRARIES})
-      CHECK_CXX_SOURCE_RUNS("extern \"C\" int dCheckConfiguration(const char*str); \n int main() { return dCheckConfiguration(\"ODE_double_precision\")?0:1; }\n" ODE_IS_DOUBLE)
-      # should return 1 if ODE_double_precision
-    ELSE (CMAKE_CROSS_COMPILING)
-      SET(ODE_IS_DOUBLE FALSE)
-    ENDIF ()
-    SET(USE_ODE_DOUBLE ${ODE_IS_DOUBLE} CACHE BOOL "Select false if compiled ODE in single precision, or true for double precision")
-  ENDIF ()
-
-  IF (USE_ODE_DOUBLE)
+  if(ODE_DOUBLE_PRECISION)
     ADD_DEFINITIONS(-DdDOUBLE)
-  ELSE ()
+  else()
     ADD_DEFINITIONS(-DdSINGLE)
-  ENDIF (USE_ODE_DOUBLE)
+  endif()
   
   # If glut is set up, we can turn this on
   ADD_DEFINITIONS(-DUSE_GLUT)
