--- a/src/tools/depth2kin/CMakeLists.txt
+++ b/src/tools/depth2kin/CMakeLists.txt
@@ -34,6 +34,9 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${optimization_INCLUDE_DIRS}
                     ${learningMachine_INCLUDE_DIRS})
                     
+add_definitions(${IPOPT_DEFINITIONS})
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${IPOPT_LINKER_FLAGS}")
+
 add_executable(${PROJECTNAME} ${header_files} ${source_files} ${idl_files} ${doc_files})
 target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES}
                                      ${IPOPT_LIBRARIES}
