--- a/src/tools/depth2kin/CMakeLists.txt
+++ b/src/tools/depth2kin/CMakeLists.txt
@@ -35,9 +35,8 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${learningMachine_INCLUDE_DIRS})
                     
 add_definitions(${IPOPT_DEFINITIONS})
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${IPOPT_LINKER_FLAGS}")
-
 add_executable(${PROJECTNAME} ${header_files} ${source_files} ${idl_files} ${doc_files})
+set_property(TARGET ${PROJECTNAME} APPEND_STRING PROPERTY LINK_FLAGS " ${IPOPT_LINK_FLAGS}")
 target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES}
                                      ${IPOPT_LIBRARIES}
                                      ${OpenCV_LIBRARIES}
