Implementation of USBcamera driver for linux system.
- Acquisition works
TODOs:
- No controls implemented yet (brightness ...)
- Check thread safety
- Conversion YUV to RGB done by SW, to optimize
- Bayer to RGB to be integrated and have a param to choose conversion type
- Windows version (later on)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,7 @@ set(ICUB_CMAKE_SCRIPTS FindPLXCANAPI.cmake
                         FindGLUT.cmake
                         FindOpenGL.cmake
                         iCubHelpers.cmake
+                        FindV4L2.cmake
                         iCubOptions.cmake)
                         #iCubFindDependencies.cmake)
 
