[camcalib]: conf files for simulator fixed

--- a/app/cameraCalibration/conf/icubSimEyes.ini
+++ b/app/cameraCalibration/conf/icubSimEyes.ini
@@ -2,21 +2,35 @@
 projection         pinhole
 drawCenterCross    0
 
+// fx=fy=0.5*240*cotan(50/2)
+// fov = 50 deg
+
 w 320
 h 240
 fx 257.34
 fy 257.34
 cx 160
 cy 120
-
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
 
 [CAMERA_CALIBRATION_LEFT]
 projection         pinhole
 drawCenterCross    0
 
+// fx=fy=0.5*240*cotan(50/2)
+// fov = 50 deg
+
 w 320
 h 240
 fx 257.34
 fy 257.34
 cx 160
 cy 120
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
+
