--- a/app/cameraCalibration/conf/icubSimEyes_640x480.ini
+++ b/app/cameraCalibration/conf/icubSimEyes_640x480.ini
@@ -2,20 +2,35 @@
 projection         pinhole
 drawCenterCross    0
 
+// fx=fy=0.5*480*cotan(50/2)
+// fov = 50 deg
+
 w 640
 h 480
-fx 446.30787465601099 
-fy 448.44778322512855
-cx 313.73434091798771
-cy 224.4691342181579
+fx 514.681
+fy 514.681
+cx 320.0
+cy 240.0
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
 
 [CAMERA_CALIBRATION_LEFT]
 projection         pinhole
 drawCenterCross    0
 
+// fx=fy=0.5*480*cotan(50/2)
+// fov = 50 deg
+
 w 640
 h 480
-fx 443.59549
-fy 444.751606
-cx 344.89962
-cy 207.652054
+fx 514.681
+fy 514.681
+cx 320.0
+cy 240.0
+k1 0.0
+k2 0.0
+p1 0.0
+p2 0.0
+
