--- a/app/iCubStartup/scripts/iCubStartup.xml.template
+++ b/app/iCubStartup/scripts/iCubStartup.xml.template
@@ -16,12 +16,14 @@
                 <node>pc104</node>
         </module>
 
+        <!-- Change <robot> with the name of your robot (e.g. iCubGenova01) -->
+
         <module>
                 <name>iKinCartesianSolver</name>
                 <parameters>--part right_arm</parameters>
                 <node>pwrNode1</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
@@ -30,7 +32,7 @@
                 <parameters>--part left_arm</parameters>
                 <node>pwrNode2</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
@@ -39,7 +41,7 @@
                 <parameters>--part right_leg</parameters>
                 <node>pwrNode3</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
@@ -48,7 +50,7 @@
                 <parameters>--part left_leg</parameters>
                 <node>pwrNode4</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
@@ -57,7 +59,7 @@
                 <parameters>--from config_imu_filter.ini</parameters>
                 <node>pwrNode5</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                     <port timeout="60">/imuFilter/inertial:o</port>
                 </dependencies>
         </module>
@@ -69,7 +71,7 @@
                 <parameters>--autoconnect</parameters>
                 <node>pwrNode6</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
@@ -88,7 +90,7 @@
                 <name>fingersTuner</name>
                 <node>console</node>
                 <dependencies>
-                    <port timeout="60.0" request="is_ready" reply="[ok]">/robotInterface</port>
+                    <port timeout="60.0" request="is_ready" reply="[ok]">/<robot>/robotInterface</port>
                 </dependencies>
         </module>
 
