--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -65,7 +65,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjSkin)
   add_subdirectory(embObjAnalog)
   add_subdirectory(embObjVirtualAnalogSensor)
-  add_subdirectory(V4Lcamera)
+  add_subdirectory(usbCamera)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(coman)
   add_subdirectory(imu3DM_GX3)
