--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -66,6 +66,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjAnalog)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(usbCamera)
+  add_subdirectory(imuST_M1)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(coman)
   add_subdirectory(imu3DM_GX3)
