icubmod - imuST - changed CMakeFile so that device is available only on Linux platform

--- a/src/libraries/icubmod/imuST_M1/CMakeLists.txt
+++ b/src/libraries/icubmod/imuST_M1/CMakeLists.txt
@@ -9,6 +9,33 @@ SET(PROJECTNAME imuST_M1)
 yarp_prepare_device(${PROJECTNAME} TYPE yarp::dev::imuST_M1 INCLUDE ST_M1.h WRAPPER inertial)
 
 if (ENABLE_${PROJECTNAME})
+
+    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        MESSAGE(SEND_ERROR "${PROJECTNAME}: device not available yet on OS X platform, please turn off the device")
+        return()
+    elseif(UNIX)
+        find_package(libv4l2 REQUIRED)
+        find_package(libv4lconvert REQUIRED)
+
+        if( NOT libv4l2_FOUND )
+            MESSAGE(SEND_ERROR "${PROJECTNAME}: library libv4l2 not found, please turn off device.")
+            return()
+        endif(NOT libv4l2_FOUND )
+
+        if( NOT libv4lconvert_FOUND )
+            MESSAGE(SEND_ERROR "${PROJECTNAME}: libv4lconvert not found, please turn off device.'")
+            return()
+        endif(NOT libv4lconvert_FOUND )
+
+    elseif(WIN32)
+        MESSAGE(SEND_ERROR "${PROJECTNAME}: device not available yet on Windows platform, please turn off the device")
+        return()
+    else()
+        MESSAGE(SEND_ERROR "${PROJECTNAME}: OS not supported, please turn off the device")
+        return()
+  endif()
+
+
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS})
     yarp_add_plugin(${PROJECTNAME} ST_M1.cpp ST_M1.h ST_M1_dataType.h)
     target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES})
