--- a/app/robots/iCubGenova02/CMakeLists.txt
+++ b/app/robots/iCubGenova02/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(appname iCubGenova02)
 
-set(scripts icub_all.xml icub_all_intertials.xml robotInterface.ini general.xml)
+set(scripts icub_all.xml icub_all_inertials.xml robotInterface.ini general.xml)
 
 yarp_install(FILES ${scripts} DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname})
 yarp_install(DIRECTORY calibrators DESTINATION ${ICUB_ROBOTS_INSTALL_DIR}/${appname} PATTERN .svn EXCLUDE)  
