--- a/app/robots/experimentalSetups/mc4plus-jig_2joints/yarpmotorgui.ini
+++ b/app/robots/experimentalSetups/mc4plus-jig_2joints/yarpmotorgui.ini
@@ -1,17 +1,17 @@
 //name of the robot          
 name icub      
 //parts to be opened by the GUI            
-parts (mc4plusjig)               
+parts (mc4plusjig-2joints)               
  
 [mc4plusjig_zero]                       
 PositionZero                0	0                          
 VelocityZero                20	20
                           
 [mc4plusjig_calib]
-CalibrationType		    0
-Calibration1		    250.0
-Calibration2		    10.0
-Calibration3	            0.0		    
+CalibrationType		        3   3
+Calibration1		        0.0 0.0
+Calibration2		        0.0 0.0
+Calibration3	            0.0 0.0		    
  
 //DO NOT REMOVE THIS LINE    
  
