--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -67,6 +67,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(usbCamera)
   add_subdirectory(imuST_M1)
+  add_subdirectory(tripod)
 if (ICUB_ICUBINTERFACE_EXPERIMENTAL)
   add_subdirectory(imu3DM_GX3)
 endif()
